# adso

./: .gitignore  CHANGELOG.md  LICENSE  README.md  goodreads_to_notion.py  package-lock.json  package.json  plan.md  pyproject.toml  requirements-lock.txt  setup.py
.github/workflows/: ci.yml
examples/: demo.md  goodreads_sample.csv  seed_conflicts.py
src/adso/: __init__.py  activity.py  branding.py  catalogue.py  cli.py  config.py  conflicts.py  covers.py  db.py  dedupe.py  doctor.py  errors.py  exports.py  goodreads.py  metadata.py  notion.py  ol_http.py  reports.py  sync.py
src/adso/web/: __init__.py  app.py
src/adso/web/static/: app.css
src/adso/web/styles/: input.css
src/adso/web/templates/: _conflict_field.html  _conflict_field_resolved.html  _conflict_group.html  _conflict_group_resolved.html  _duplicate_group.html  _duplicate_resolved.html  _local_fields.html  _local_fields_form.html  _notion_result.html  activity.html  base.html  book_detail.html  catalogue.html  conflicts.html  duplicates.html  export.html  import.html  report.html
tests/: test_activity.py  test_adso_core.py  test_cli_errors.py  test_cli_help.py  test_config.py  test_conflicts.py  test_covers.py  test_dedupe.py  test_import_label.py  test_metadata.py  test_sync_fields.py  test_web_conflicts.py  test_web_surfaces.py
