[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adso"
version = "0.1.0"
description = "Local-first Goodreads backup and personal library catalogue sync tool."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "David Whipps", email = "hello@davidwhipps.com" },
]
keywords = ["goodreads", "library", "catalogue", "books", "local-first", "sqlite"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
notion = [
  "requests>=2.31",
  "python-dotenv>=1.0",
]
covers = [
  "requests>=2.31",
]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/dmontaigne/adso"
Repository = "https://github.com/dmontaigne/adso"
Issues = "https://github.com/dmontaigne/adso/issues"

[project.scripts]
adso = "adso.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adso = ["web/templates/*.html", "web/static/*", "web/static/vendor/*"]
