[project]
name = "adso"
version = "0.1.0"
description = "Local-first Goodreads backup and personal library catalogue sync tool."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
notion = [
  "requests>=2.31",
  "python-dotenv>=1.0",
]
covers = [
  "requests>=2.31",
]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]
dev = [
  "ruff>=0.4",
]

[project.scripts]
adso = "adso.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adso = ["web/templates/*.html", "web/static/*", "web/static/vendor/*"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["prototypes", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Line length is advisory for this project; enforcing it would churn a lot of
# existing lines without improving correctness.
ignore = ["E501"]
